# markdown-packager

./: .coveralls.yml  .travis.yml  Cargo.toml  README.md
example/working_with_bibliography/: README.md
example/working_with_bibliography/files/: article.md  bibliography.yaml  embedded_article.md
src/: cli.rs  main.rs
src/config/: mod.rs
src/download/: mod.rs
src/embed/: mod.rs
src/errors/: mod.rs
src/image_embedder/: mod.rs
src/image_encoder/: mod.rs
src/image_linker/: mod.rs
src/logger/: mod.rs
src/markdown_document/: mod.rs
src/yaml_header/: mod.rs
test/files/: example.tex  fake_css.css  fake_header.yaml  fake_script.js
